--- a/plants/src/main/resources/templates/index.html
+++ b/plants/src/main/resources/templates/index.html
@@ -9,10 +9,17 @@
 
 <body>
 	<div layout:fragment="content">
-		<h2>Home Page</h2>
-
 		<form>
-			<h1> Home Page Contents here </h1>
+			<h3> Welcome to the application's Home Page.</h3>
+
+			<h3> In this application, you can perform CRUD operations with the Plant database.<br>
+				Click "View All" on the navigation bar to view the complete list of Plant entries in our database. <br>
+				To simplify your search, click "Search" to view a filtered list of Plant entries. <br>
+				You can also create New Plant entries by clicking "Add New" navigation tab on the right corner. <br>
+				<br> To return to this page, click on the application's logo on the navigation bar. <br>
+				<br>Thank you for visiting our <b>Plant Dictionary</b>!
+					
+			</h3>
 		</form>
 		
 	</div>
